--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browser-sync": "^1.8.3",
     "browserify": "^7.0.0",
     "crypto-js": "^3.1.2-5",
+    "di": "0.0.1",
     "envify": "^3.2.0",
     "es6ify": "^1.6.0",
     "flux": "^2.0.1",
@@ -31,13 +32,16 @@
     "gulp-livereload": "^2.1.1",
     "gulp-minify-css": "^0.3.11",
     "gulp-notify": "^2.0.1",
+    "gulp-postcss": "^4.0.1",
     "gulp-shell": "^0.2.11",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.1",
     "keymirror": "^0.1.1",
+    "less-plugin-autoprefix": "^1.1.0",
     "lodash": "^2.4.1",
+    "postcss": "^4.0.0",
     "pretty-hrtime": "^0.2.2",
     "react": "^0.12.1",
     "reactify": "^0.17.1",
