--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.1",
+    "immutable": "^3.5.0",
     "keymirror": "^0.1.1",
     "less-plugin-autoprefix": "^1.1.0",
     "lodash": "^2.4.1",
