--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "keymirror": "^0.1.1",
     "less-plugin-autoprefix": "^1.1.0",
     "lodash": "^2.4.1",
+    "node-uuid": "^1.4.2",
     "postcss": "^4.0.0",
     "pretty-hrtime": "^0.2.2",
     "react": "^0.12.1",
