--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "less-plugin-autoprefix": "^1.1.0",
     "lodash": "^2.4.1",
     "node-uuid": "^1.4.2",
+    "otr": "^0.2.13",
     "postcss": "^4.0.0",
     "pretty-hrtime": "^0.2.2",
     "react": "^0.12.1",
