--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "postcss": "^4.0.0",
     "pretty-hrtime": "^0.2.2",
     "react": "^0.12.1",
+    "react-loading": "0.0.2",
     "react-modal": "0.0.7",
     "reactify": "^0.17.1",
     "require-dir": "^0.1.0",
+    "stringify": "^3.0.0",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.1.1"
   }
